tests/files/type_checker_tests/should_fail/179.cmdr
//Should fail calling something not a function
(if true then true else true)();
